# connectedhomeip

config/atmosic/chip-gn/: .gn  BUILD.gn  args.gni
config/atmosic/chip-module/: CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.features  generate_factory_data.cmake
config/atmosic/mbedtls/: chip_mbedtls_config.h
examples/light-switch-app/atmosic/: CMakeLists.txt  Kconfig  README.md  prj.conf  prj_release.conf
examples/light-switch-app/atmosic/boards/: ATMEVK-3425-PQK-2_ns.overlay  ATMEVK-3430e-WQN-2_ns.overlay
examples/light-switch-app/atmosic/main/: AppTask.cpp  BindingHandler.cpp  LightSwitch.cpp  ShellCommands.cpp
examples/light-switch-app/atmosic/main/include/: AppConfig.h  AppTask.h  BindingHandler.h  CHIPProjectConfig.h  LightSwitch.h  ShellCommands.h
examples/light-switch-app/light-switch-common/: light-switch-app.matter  light-switch-app.zap
examples/lighting-app/atmosic/: CMakeLists.txt  Kconfig  README.md  prj.conf  prj_release.conf
examples/lighting-app/atmosic/main/: AppTask.cpp  ZclCallbacks.cpp
examples/lighting-app/atmosic/main/include/: AppConfig.h  AppEvent.h  AppTask.h
examples/lock-app/atmosic/: CMakeLists.txt  Kconfig  README.md  prj.conf  prj_release.conf
examples/lock-app/atmosic/main/: AppTask.cpp  BoltLockManager.cpp  ZclCallbacks.cpp
examples/lock-app/atmosic/main/include/: AppConfig.h  AppEvent.h  AppTask.h  BoltLockManager.h  CHIPProjectConfig.h
examples/platform/atmosic/app_dts/: app_partition_defs.h
examples/platform/atmosic/common/: mainCommon.cpp
examples/platform/atmosic/project_include/: OpenThreadConfig.h
examples/platform/atmosic/util/: DFUOverSMP.cpp  DFUTrigger.cpp  LEDWidget.cpp  OTAUtil.cpp  PWMDevice.cpp
examples/platform/atmosic/util/include/: BoardUtil.h  DFUOverSMP.h  EventTypes.h  FabricTableDelegate.h  LEDUtil.h  LEDWidget.h  OTAUtil.h  PWMDevice.h
examples/platform/atmosic/util/test/: TestInetCommon.cpp
examples/temperature-measurement-app/atmosic/: CMakeLists.txt  Kconfig  README.md  prj.conf  prj_release.conf
examples/temperature-measurement-app/atmosic/boards/: ATMEVK-3425-PQK-5_ns.overlay
examples/temperature-measurement-app/atmosic/main/: AppTask.cpp  SensorManager.cpp
examples/temperature-measurement-app/atmosic/main/include/: AppConfig.h  AppEvent.h  AppTask.h  CHIPProjectConfig.h  SensorManager.h
scripts/: checkout_submodules.py
src/inet/: ZephyrSocket.h
src/platform/: BUILD.gn  device.gni
src/platform/Zephyr/: BUILD.gn  CHIPDevicePlatformConfig.h  SysHeapMalloc.cpp
src/platform/atmosic/atm34/: BLEAdvertisingArbiter.h  BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPPlatformConfig.h  ConfigurationManagerImpl.h  ConnectivityManagerImpl.h  DiagnosticDataProviderImpl.h  FactoryDataProvider.cpp  FactoryDataProvider.h  InetPlatformConfig.h  InetUtils.h  KeyValueStoreManagerImpl.h  OTAImageProcessorImpl.cpp  PlatformManagerImpl.h  SysHeapMalloc.h  SystemPlatformConfig.h  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h  ZephyrConfig.h  args.gni
